<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.apache</groupId>
    <artifactId>smell-analyzer</artifactId>
    <version>1.0-SNAPSHOT</version>

    <!--
        Centralizziamo tutte le versioni delle dipendenze qui.
        Questo rende l'aggiornamento e la gestione delle coerenze molto più semplice.
    -->
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Versioni dei Plugin Maven -->
        <maven.plugin.javadoc.version>3.6.3</maven.plugin.javadoc.version>
        <maven.plugin.shade.version>3.6.0</maven.plugin.shade.version>
        <pmd.plugin.version>3.24.0</pmd.plugin.version> <!-- NUOVA PROPERTY per il plugin PMD -->

        <!-- Versioni delle Dipendenze -->
        <pmd.version>7.3.0</pmd.version> <!-- NUOVA PROPERTY per la libreria PMD -->
        <jgit.version>6.8.0.202311291450-r</jgit.version>
        <javaparser.version>3.25.10</javaparser.version>
        <weka.version>3.8.6</weka.version>
        <json.version>20240303</json.version>
        <lombok.version>1.18.32</lombok.version>
        <junit.version>4.13.2</junit.version>
        <tablesaw.version>0.43.1</tablesaw.version>
    </properties>

    <dependencies>
        <!-- Libreria per interagire con i repository Git -->
        <dependency>
            <groupId>org.eclipse.jgit</groupId>
            <artifactId>org.eclipse.jgit</artifactId>
            <version>${jgit.version}</version>
        </dependency>

        <!-- Libreria per il parsing del codice sorgente Java -->
        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-core</artifactId>
            <version>${javaparser.version}</version>
        </dependency>

        <!-- Librerie per il Machine Learning (WekaController) -->
        <dependency>
            <groupId>nz.ac.waikato.cms.weka</groupId>
            <artifactId>weka-stable</artifactId>
            <version>${weka.version}</version>
        </dependency>

        <!-- Dipendenza SMOTE (già presente, la lascio) -->
        <dependency>
            <groupId>nz.ac.waikato.cms.weka</groupId>
            <artifactId>SMOTE</artifactId>
            <version>1.0.3</version>
        </dependency>

        <!-- Libreria per la gestione di JSON -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>

        <!-- Utilità per ridurre codice boilerplate -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Supporto per i test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Per l'analisi statica con PMD -->
        <dependency>
            <groupId>net.sourceforge.pmd</groupId>
            <artifactId>pmd-java</artifactId>
            <version>${pmd.version}</version> <!-- AGGIORNATO per usare la property -->
        </dependency>

        <!-- Libreria Tablesaw per la gestione dei dati -->
        <dependency>
            <groupId>tech.tablesaw</groupId>
            <artifactId>tablesaw-core</artifactId>
            <version>${tablesaw.version}</version> <!-- AGGIORNATO per usare la property -->
        </dependency>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>5.12.0</version>
        </dependency>

    </dependencies>

    <build>
        <finalName>smell-analyzer</finalName>
        <plugins>
            <!-- Plugin per creare un unico JAR eseguibile con tutte le dipendenze -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven.plugin.shade.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>org.apache.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Plugin per generare la documentazione Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.plugin.javadoc.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- ======================================================= -->
            <!--          NUOVO PLUGIN: CONFIGURAZIONE PMD               -->
            <!-- ======================================================= -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${pmd.plugin.version}</version>
                <configuration>
                    <rulesets>
                        <!-- Usa il tuo file di regole personalizzato -->
                        <ruleset>src/main/resources/pmd-ruleset.xml</ruleset>
                    </rulesets>
                    <!-- Genera il report in formato CSV -->
                    <format>csv</format>
                    <!-- Non far fallire il build se trova degli smell -->
                    <failOnViolation>false</failOnViolation>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <phase>verify</phase> <!-- Esegui durante la fase di 'verify' -->
                        <goals>
                            <goal>pmd</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>